<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tv">

    <fragment
        android:id="@+id/nav_tv"
        android:name="com.bage.tutorials.ui.tv.TVFragment"
        android:label="@string/menu_tv"
        tools:layout="@layout/fragment_tv" />
    <fragment
        android:id="@+id/nav_deliver"
        android:name="com.bage.tutorials.ui.deliver.DeliverFragment"
        android:label="@string/menu_deliver"
        tools:layout="@layout/fragment_deliver" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.bage.tutorials.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.bage.tutorials.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>