<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/menu_tv" />
        <item
            android:visible="false"
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_wb_sunny_black_24dp"
            android:title="@string/menu_weather" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_outline_black_24dp"
            android:title="@string/menu_about" />
    </group>

    <!--    <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_outline_black_24dp"
                    android:title="@string/menu_about" />
            </menu>
        </item>-->

</menu>
