<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="8dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_menu_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.bage.tutorials.view.CircleImageView
            android:id="@+id/nav_menu_user_icon"
            android:layout_width="@dimen/user_icon_width"
            android:layout_height="@dimen/user_icon_width"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/user_null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="24dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:id="@+id/nav_menu_user_name"
            android:text="@string/nav_header_title"
            app:layout_constraintLeft_toLeftOf="@id/nav_menu_user_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.bage.tutorials.view.IconView
            android:id="@+id/leftmenu_iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="62dp"
            app:layout_constraintLeft_toLeftOf="@id/nav_menu_user_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:materialIcon="map_marker"
            app:materialIconColor="@color/icon_color_nav"
            app:materialIconSize="@dimen/icon_width_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="60dp"
            android:text="@string/nav_header_location"
            app:layout_constraintLeft_toLeftOf="@id/nav_menu_user_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/nav_menu_user_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:visibility="gone"
        android:id="@+id/nav_menu_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
